src/components/Section/styles.module.scss
@import '~carbon-components/scss/globals/scss/_vars.scss';
@import '@/styles/mixins';
@import '~carbon-components/scss/globals/scss/_typography.scss';

.SectionWrapper {
	width: 100%;
}

.Section {
	padding: $spacing-10 0;

	@include bp('md') {
		padding: $spacing-11 0;
	}

	:global([class^='bx--row'] > [class^='bx--col']) {
		position: relative;
	}

	& > :global([class^='bx--row']) {
		width: auto;
	}

	&.HasBottomImage,
	&.IsCondensedBottom {
		padding-bottom: $spacing-06;
	}

	&.IsCondensedTop {
		padding-top: $spacing-06;
	}

	&.IsNarrowTop {
		padding-top: $spacing-09;
	}

	&.IsNarrowBottom {
		padding-bottom: $spacing-09;
	}

	&.IsNoSpaceTop {
		padding-top: 0;
	}

	&.IsNoSpaceBottom {
		padding-bottom: 0;
	}

	.LeftSide {
		margin-bottom: $spacing-07;
		position: relative;

		@include bp('md', false) {
			margin-bottom: 0;
		}
	}

	.Title {

		:global(p:not([class])) {
			@include carbon--type-style('expressive-heading-02', true);
		}
	}

	&.HasTopTitle {

		.Title {
			margin-bottom: $spacing-07;
		}
	}

	.TopImage,
	.BottomImage,
	.BottomImageMobile {
		margin: 0 auto;
		width: 100%;
		text-align: center;
	}

	.BottomImage {
		margin-top: $spacing-10;
	}

	.BottomImageHiddenMobile {
		@include bp('md', true) {
			display: none;
		}
	}

	.BottomImageMobile {
		margin-top: $spacing-10;
		margin-bottom: $spacing-10;

		@include bp('md', false) {
			display: none;
		}
	}

	.LeftImage {
		position: relative;
		top: 50%;
		left: 50%;
		transform: translate3d(-50%, -50%, 0);
		display: inline-block;
	}

	&.HasDarkBackground {
		color: $white-0;

		.Title {
			color: $white-0;
		}
	}
}

